2014-02-12  Kaz Kylheku  <kaz@kylheku.com>

	* parser.l: Disallow syntax like 1.0a, flagging it as
	an invalid floating-point token.  The problem is that 1a is allowed,
	for compatibility with other Lisp dialects (it is a symbol) whereas
	1.0a was scanning as 1.0 followed by a, which is inconsistent.
	Some Lisp dialects embedded dots in symbols, and allow 1.0a
	as a symbol token. We don't.

2014-02-12  Kaz Kylheku  <kaz@kylheku.com>

	* hash.c (struct hash): New member, equal_fun.
	(hash_equal_op): Short circuited logic: whenever we pull
	identical cells from either hash, we don't have to go
	through the pending lookaside list.
	(make_hash, make_similar_hash): Initialize new structure member.

2014-02-12  Kaz Kylheku  <kaz@kylheku.com>

	* hash.c (hash_equal_op, hash_hash_op): New static functions.
	(hash_ops): New functions registered in table of operations.

	* txr.1: Documentation for equal function updated to explain
	how two hashes are equal.

2014-02-12  Kaz Kylheku  <kaz@kylheku.com>

	Undoing bogus optimization, which can only work when objects
	are treated as immutable.

	* hash.c (last_equal_key, last_equal_hash): Variables removed.
	(equal_hash, hash_process_weak): All references to removed
	variables scrubbed.

2014-02-12  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (some_satisfy, all_satisfy, none_satisfy): Fix coding
	mistake from two commits ago leading to a regression.

2014-02-11  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (eval_init): Register new functions posqual, posql,
	posq, pos, and pos_if as intrinsics.

	* lib.c (posqual, posql, posq, pos, pos_if): New functions.

	* lib.h (posqual, posql, posq, pos, pos_if): Declared.

	* txr.1: Documented

2014-02-11  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (eval_init): Turn a require argument into an optional
	one for the functions some, all and none.

	* lib.c (some_satisfy, all_satisfy, none_satisfy): Add defaulting
	behavior for pred parameter.
