@@ -2491,6 +2491,7 @@ void eval_init(void)
   reg_fun(intern(lit("hash"), user_package), func_n0v(hashv));
   reg_fun(intern(lit("hash-construct"), user_package), func_n2(hash_construct));
   reg_fun(gethash_s, func_n3o(gethash_n, 2));
+  reg_fun(intern(lit("inhash"), user_package), func_n3o(inhash, 2));
   reg_fun(intern(lit("sethash"), user_package), func_n3(sethash));
   reg_fun(intern(lit("pushhash"), user_package), func_n3(pushhash));
   reg_fun(intern(lit("remhash"), user_package), func_n2(remhash));
